--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "dexie": "^4.2.1",
     "sweetalert": "^2.1.2",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
